vlib/v/checker/tests/result_chan_test_err.vv
fn main() {
	c := chan !string{}
	println(c.len)
}